@@ -178,9 +178,11 @@ td {
    section to the "options" section.</p>
 
 <p>Custom sections which define per-virtual-host configuration option
-   overrides must now have their names prefixed with "vhost-".  For
-   example, the following configuration which was valid in ViewVC 1.0
-   is no longer valid:</p>
+   overrides must now have their names prefixed with "vhost-".  Also,
+   instead of a hyphen (-) between the virtual host name and the base
+   configuration section being overridden, now there should be a
+   forward slash character (/).  For example, the following
+   configuration which was valid in ViewVC 1.0 is no longer valid:</p>
 
 <blockquote><pre>[vhosts]
 all = viewvc.*
@@ -195,7 +197,7 @@ allow_tar = 1
 <blockquote><pre>[vhosts]
 all = viewvc.*
 
-[vhost-all-options]
+[vhost-all/options]
 allow_tar = 1
 </pre>
 </blockquote>
