@@ -666,7 +666,7 @@ enabled = 0
 #
 # After you've named and defined your vhosts, you may then create new
 # configuration sections whose names are of the form
-# vhost-VHOSTNAME-CONFIGSECTION.  Inside those configuration sections, you
+# vhost-VHOSTNAME/CONFIGSECTION.  Inside those configuration sections, you
 # override the standard ViewVC options typically found in the base
 # configuration section named CONFIGSECTION ("general", "option", etc.)
 #
@@ -676,15 +676,15 @@ enabled = 0
 # svn = svn.yourdomain.*, viewvc.*
 # cvs = cvs.yourdomain.*
 #
-# [vhost-svn-general]
+# [vhost-svn/general]
 # cvs_roots = 
 # svn_roots = svnroot: /var/svn/repos
 # default_root = svnroot
 #
-# [vhost-svn-options]
+# [vhost-svn/options]
 # show_logs = 1
 #
-# [vhost-cvs-general]
+# [vhost-cvs/general]
 # cvs_roots = cvsroot: /var/cvs/cvsroot
 # svn_roots = 
 # default_root = cvsroot
